--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Top Autocare - Premium Garage Services</title>
+    <title>Top Autocare - Garage Services</title>
     <meta name="description" content="Top Autocare Garage in Nairobi. Diagnostics, Engine Repair, Body Work and Painting.">
 
     <!-- Font Awesome -->
